// 1. Zákazníci a doplňkový profil (Vztah 1:1)
Table customer {
  id int [pk, increment]
  email varchar(100) [unique, not null]
  password_hash varchar(255) [not null]
  created_at datetime [default: `now()`]
  active boolean [default: true]
}

Table customer_profile {
  customer_id int [pk, ref: - customer.id] // Vztah 1:1
  first_name varchar(50) [not null]
  last_name varchar(50) [not null]
  phone varchar(20)
  birth_date date
}

// 2. Kategorie (Sebereferenční stromová struktura M:1)
Table category {
  id smallint [pk, increment]
  parent_id smallint [ref: >? category.id] // Inline reference pro nullable sloupec
  name varchar(100) [not null]
  description varchar(255)
  product_count mediumint [default: 0, note: 'Udržováno automaticky přes TRIGGER']
}

// 3. Produkty
Table product {
  id int [pk, increment]
  name varchar(150) [not null]
  price decimal(10,2) [not null]
  stock_quantity int [default: 0]
  attributes json [note: 'Flexibilní parametry produktu']
  description text
  created_at datetime [default: `now()`]
  active boolean [default: true]
}

// 4. Vazební tabulka pro M:N (Kategorie <-> Produkty)
Table product_category {
  product_id int [ref: > product.id]
  category_id smallint [ref: > category.id]

  indexes {
    (product_id, category_id) [pk]
  }
}

// 5. Uživatelská hodnocení (Vztah 1:N)
Table rating {
  id int [pk, increment]
  product_id int [not null, ref: > product.id]
  customer_id int [not null, ref: > customer.id]
  score tinyint [not null, note: 'CHECK: score BETWEEN 1 AND 5']
  comment varchar(255)
  created_at datetime [default: `now()`]

  indexes {
    (customer_id, product_id) [unique]
  }
}

// 6. Objednávky a položky objednávky (Transakce, ENUM)
Enum order_status {
  new
  paid
  shipped
  cancelled
}

Table orders {
  id int [pk, increment]
  customer_id int [not null, ref: > customer.id]
  status order_status [default: 'new']
  total_price decimal(10,2) [default: 0]
  created_at datetime [default: `now()`]
}

Table order_item {
  order_id int [ref: > orders.id]
  product_id int [ref: > product.id]
  quantity smallint [not null, default: 1]
  unit_price decimal(10,2) [not null, note: 'Historická prodejní cena']

  indexes {
    (order_id, product_id) [pk]
  }
}